Fix spacing

--- a/src/App.css
+++ b/src/App.css
@@ -788,6 +788,7 @@ body {
   background-color: var(--elevated-bg);
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
+  padding-bottom: 10px;
 }
 
 .cm-editor .cm-gutters {
